--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,11 @@
 name: crds
 
 on:
-   gollum:
-   schedule:
-       - cron: '0 9 * * *'
+  push:
+    branches: 
+      - master
+  schedule:
+    - cron: '0 9 * * *'
 jobs:
   start:
     
