--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-#每天 16:00 执行
+#每天 15:40 开始排队，延时未知
 name: crds
 
 on:
   push:
   schedule:
-    - cron: '0 8 * * *'
+    - cron: '40 7 * * *'
     
 jobs:
   start:
