--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,11 @@ name: crds
 
 on:
   workflow_dispatch:
+    inputs:
+      coolpush:
+          description: '推送消息的地址'
+          required: true
+          default: 'Error'
     
 jobs:
   start:
@@ -22,7 +27,7 @@ jobs:
     - name: run
       env:
         AGENTID: ${{ secrets.AGENTID }}
-        COOLPUSHURL: ${{ secrets.COOLPUSHURL }}
+        COOLPUSHURL: ${{ github.event.inputs.name }}
         CORPID: ${{ secrets.CORPID }}
         CORPSECRET: ${{ secrets.CORPSECRET }}
         IMG_URL: ${{ secrets.IMG_URL }}
