--- a/.github/workflows/main_run.yml
+++ b/.github/workflows/main_run.yml
@@ -29,7 +29,7 @@ jobs:
         PUSHUSR: ${{ secrets.PUSHUSR }}
       run: |
         pip install -r requirement.txt
-        python mrds.py
+        python main_run.py
         
     - name: Commit and push if changed   # hmm.json更新到仓库
       run: |
